# Following-the-Rust-book

./: README.md
advanced_functions_and_closures/: Cargo.toml
advanced_functions_and_closures/src/: advanced_functions.rs  main.rs  returning_closures.rs
advanced_traits/src/: associated_types.rs  default_generic_types.rs  fully_qualified_calling.rs  main.rs  newtype_pattern.rs  operator_overload.rs  supertraits.rs
advanced_types/src/: dynamically_sized_types.rs  main.rs  never_type.rs  newtype_for_safety.rs  type_aliases.rs
closures/src/: main.rs
collections/src/: hashmaps.rs  main.rs  strings.rs  vectors.rs
concurrency/src/: channels.rs  join_handles.rs  main.rs  mutexes_with_arc.rs  send_and_sync_traits.rs  thread_move_closure.rs
documentation/src/: lib.rs  main.rs
error_types/: Cargo.toml
error_types/src/: main.rs
errors/src/: main.rs
files/src/: main.rs
functions/src/: main.rs
generics/src/: deduplication_by_function.rs  deduplication_by_generics.rs  deduplication_enums_by_generics.rs  deduplication_struct_by_generics.rs  main.rs
generics_trait-bounds_lifetimes/: Cargo.toml
grep/src/: lib.rs  (+1 more)
loop_keyword/: Cargo.toml
macros/: Cargo.toml
macros/neko_attribute/: Cargo.toml
macros/neko_attribute/src/: lib.rs
macros/neko_derive/: Cargo.toml
macros/neko_derive/src/: lib.rs
macros/neko_function/: Cargo.toml
macros/neko_function/src/: lib.rs
macros/src/: attribute_macro.rs  declarative_macros.rs  derive_macro.rs  function_macro.rs  main.rs  procedural_macros.rs
object_oriented_programming/: Cargo.toml
workspaces/: Cargo.toml
(+59 files in other folders)
