[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neko_attribute = { path = "./neko_attribute" }
neko_derive = { path = "./neko_derive" }
neko_function = { path = "./neko_function" }
